# para-files

./: .env.example  .gitignore  .pre-commit-config.yaml  251225-plan-unifie-classification-mlx.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  TODO-routing-fixes.md  VISION.md  archives.txt  inbox_analysis.json  inbox_analysis.txt  pdf.txt  personal_file_tree.yaml  pyproject.toml  resources.txt
.claude/skills/: photographe-amateur.skill
.claude/skills/chef-cuisine/: SKILL.md
.claude/skills/classification-config/: SKILL.md
.claude/skills/claude-md-auditor/: SKILL.md
.claude/skills/corporate-brief-creator/: SKILL.md
.claude/skills/deep-research/: SKILL.md
.claude/skills/deep-research-tech/: SKILL.md
.claude/skills/documentation-master/: SKILL.md
.claude/skills/formateur/: SKILL.md
.claude/skills/obsidian-gardener/: SKILL.md
.claude/skills/para-manager/: SKILL.md
.claude/skills/photographe-amateur/: SKILL.md
.claude/skills/python-dev/: SKILL.md
.github/: dependabot.yml
.github/workflows/: ci.yml  docs.yml  release.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/milestones/: v1.1-REQUIREMENTS.md  v1.2-MILESTONE-AUDIT.md  v1.2-REQUIREMENTS.md  v1.2-ROADMAP.md
.planning/phase-1-bug-fixes/: PLAN.md
.planning/phases/01-bug-fixes/: 01-PLAN.md  01-SUMMARY.md  01-VERIFICATION.md
.planning/phases/02-code-quality/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-VERIFICATION.md
.planning/phases/03-test-coverage/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-SUMMARY.md  03-03-PLAN.md  03-VERIFICATION.md
.planning/phases/04-user-features/: 04-01-PLAN.md  04-02-PLAN.md  04-02-SUMMARY.md
.planning/phases/05-content-extraction/: 05-01-SUMMARY.md  05-02-PLAN.md  05-02-SUMMARY.md  05-03-PLAN.md  05-03-SUMMARY.md  05-VERIFICATION.md
.planning/phases/06-extension-routing/: 06-01-PLAN.md  06-01-SUMMARY.md  06-02-PLAN.md  06-02-SUMMARY.md  06-03-PLAN.md  06-03-SUMMARY.md  06-VERIFICATION.md
.planning/phases/07-inbox-processing-ux/: 07-01-PLAN.md  07-02-PLAN.md  07-02-SUMMARY.md  07-VERIFICATION.md
.planning/phases/08-foundation-hardening/: 08-01-PLAN.md  08-01-SUMMARY.md  08-02-PLAN.md  08-02-SUMMARY.md  08-03-PLAN.md  08-03-SUMMARY.md  08-CONTEXT.md  08-VERIFICATION.md
.planning/phases/09-llm-service-reliability/: 09-01-PLAN.md  09-01-SUMMARY.md  09-02-PLAN.md  09-02-SUMMARY.md  09-03-PLAN.md  09-03-SUMMARY.md  09-CONTEXT.md  09-VERIFICATION.md
.planning/phases/10-classification-accuracy-move-safety/: 10-01-PLAN.md  10-01-SUMMARY.md  10-02-PLAN.md  10-02-SUMMARY.md  10-03-PLAN.md  10-03-SUMMARY.md  10-CONTEXT.md  10-VERIFICATION.md
.planning/phases/11-performance-pipeline-tests/: 11-01-PLAN.md  11-01-SUMMARY.md  11-02-PLAN.md  11-02-SUMMARY.md  11-CONTEXT.md  11-VERIFICATION.md
.serena/: project.yml
.serena/memories/: code_style_conventions.md  filename_sanitization_rules.md  project_overview.md  suggested_commands.md  task_completion_checklist.md  thema_book_classification.md
Formula/: para-files.rb
config/: documents.json  personal_file_tree.yaml  thema.json
docs/: _config.yml  advanced.md  architecture.md  cli.md  configuration.md  developer-guide.md  getting-started.md  how-to-better-claude-code.md  index.md  prd.md  tasks.md  troubleshooting.md  vision.md
docs/adr/: ADR-001-para-method.md  ADR-002-apple-silicon-only.md  ADR-003-cascading-pipeline.md  ADR-004-mlx-embeddings.md  ADR-005-yaml-config.md  ADR-006-pydantic-validation.md  ADR-007-typer-cli.md  ADR-008-uv-package-manager.md  ADR-009-thema-book-taxonomy.md  ADR-010-ollama-litellm-migration.md  ADR-011-performance-optimizations.md  README.md
docs/advanced/: programmatic-usage.md
docs/architecture/: overview.md  reference-tree.md  signal-4-semantic.md
docs/cli/: add-issuer.md  add-utterance.md  classify.md  clean.md  config.md  init.md  issuers.md  learn.md  move.md  overview.md  routes.md  scan.md  test-route.md  tree.md
docs/configuration/: env-file.md  llm-fallback.md  mlx-model.md  overview.md  para-root.md  paths.md  yaml-config.md
docs/getting-started/: first-file.md  installation.md  quick-setup.md
docs/plans/: classification-issues-report.md  taxonomix-plan.md
docs/tasks/: add-custom-routes.md  adjust-confidence.md  batch-classify.md  classify-single-file.md  enable-llm-fallback.md  handle-duplicates.md  improve-matching.md  learn-from-files.md  manage-issuers.md  move-files.md  scan-directory.md  set-up-para-folder.md  test-routing-rules.md
docs/troubleshooting/: confidence-too-low.md  files-going-to-inbox.md  model-download-slow.md
scripts/: analyze_inbox.py  update_documents_json.py
src/para_files/: __init__.py  circuit_breaker.py  config.py  learner.py  logging.py  main.py  mover.py  pipeline.py  reference_tree.py  types.py
src/para_files/classifiers/: __init__.py  base.py  book_detector.py  domain_kb.py  extension_router.py  llm_classifier.py  llm_fallback.py  mlx_llm_classifier.py  rules_engine.py  semantic_classifier.py  semantic_router.py  taxonomy_classifier.py  (+1 more)
tests/: __init__.py  conftest.py  test_book_detector.py  test_bookstore_cmd.py  test_chm_metadata.py  test_circuit_breaker.py  test_classifiers.py  test_cleanup.py  test_cleanup_log.py  test_concurrent_move.py  test_config.py  test_content_extraction.py  test_dedupe_cmd.py  test_encoders.py  test_epub_metadata.py  test_exiftool.py  test_extension_router.py  test_file_utils.py  test_filename_detector.py  test_filename_sanitizer.py  test_geolocation.py  test_inbox_cmd.py  test_isbn_lookup.py  test_learn_cmd.py  test_learner.py  test_learning.py  test_llm_classifier.py  test_llm_fallback.py  test_main.py  test_migrate_cmd.py  test_mobi_metadata.py  test_mover.py  test_nfo_parser.py  test_ocr.py  test_ocr_metadata.py  test_pandoc.py  test_pandoc_integration.py  test_parallel.py  test_pdf_metadata.py  test_pipeline.py  (+14 more)
tests/fixtures/: test_reference_tree.yaml
(+94 files in other folders)
