[project]
name = "para-files"
version = "0.1.0"
description = "Intelligent file classification using semantic routing with PARA method"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Frédéric Jacquet", email = "fred.jacquet@gmail.com" }]
requires-python = ">=3.12"
keywords = ["ollama", "classification", "para", "semantic-routing", "litellm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: MacOS X",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Desktop Environment :: File Managers",
    "Typing :: Typed",
]

dependencies = [
    "pydantic>=2.12.0",
    "pydantic-settings>=2.6.0",
    "pyyaml>=6.0",
    "semantic-router>=0.1.0",
    "litellm>=1.50.0",
    "pyobjc-framework-vision>=12.1",
    "pyobjc-framework-quartz>=12.1",
    "pyobjc-framework-cocoa>=12.1",
    "typer>=0.21.0",
    "einops>=0.8.1",
    "httpx>=0.28.1",
    "isbnlib>=3.10.14",
    "geopy>=2.4.1",
    "faker>=39.0.0",
    "pymupdf>=1.26.7",
    "cryptography>=46.0.3",
    "bandit>=1.9.2",
    "loguru>=0.7.3",
    "openpyxl>=3.1.5",
    "odfpy>=1.4.1",
]

[project.optional-dependencies]
pdf = [
    "pypdf>=4.0.0",
]
archives = [
    "py7zr>=0.22.0",
]
dev = [
    "mypy>=1.15.0",
    "pytest>=8.3.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "pre-commit>=4.0.0",
    "types-PyYAML>=6.0.0",
]

[project.scripts]
para-files = "para_files.main:cli"

[project.urls]
Homepage = "https://github.com/fjacquet/para-files"
Repository = "https://github.com/fjacquet/para-files"
Documentation = "https://fjacquet.github.io/para-files"
Issues = "https://github.com/fjacquet/para-files/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/para_files"]

# ============================================================================
# Ruff - Linting and Formatting
# ============================================================================
[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "F",      # Pyflakes
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "C90",    # mccabe complexity
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "YTT",    # flake8-2020
    "ANN",    # flake8-annotations
    "ASYNC",  # flake8-async
    "S",      # flake8-bandit (security)
    "BLE",    # flake8-blind-except
    "FBT",    # flake8-boolean-trap
    "B",      # flake8-bugbear
    "A",      # flake8-builtins
    "COM",    # flake8-commas
    "C4",     # flake8-comprehensions
    "DTZ",    # flake8-datetimez
    "T10",    # flake8-debugger
    "EM",     # flake8-errmsg
    "EXE",    # flake8-executable
    "FA",     # flake8-future-annotations
    "ISC",    # flake8-implicit-str-concat
    "ICN",    # flake8-import-conventions
    "LOG",    # flake8-logging
    "G",      # flake8-logging-format
    "INP",    # flake8-no-pep420
    "PIE",    # flake8-pie
    "T20",    # flake8-print
    "PYI",    # flake8-pyi
    "PT",     # flake8-pytest-style
    "Q",      # flake8-quotes
    "RSE",    # flake8-raise
    "RET",    # flake8-return
    "SLF",    # flake8-self
    "SLOT",   # flake8-slots
    "SIM",    # flake8-simplify
    "TID",    # flake8-tidy-imports
    "TCH",    # flake8-type-checking
    "INT",    # flake8-gettext
    "ARG",    # flake8-unused-arguments
    "PTH",    # flake8-use-pathlib
    "TD",     # flake8-todos
    "FIX",    # flake8-fixme
    "ERA",    # eradicate
    "PD",     # pandas-vet
    "PGH",    # pygrep-hooks
    "PL",     # Pylint
    "TRY",    # tryceratops
    "FLY",    # flynt
    "PERF",   # Perflint
    "FURB",   # refurb
    "RUF",    # Ruff-specific rules
]
ignore = [
    "COM812",  # Missing trailing comma (conflicts with formatter)
    "ISC001",  # Single line implicit string concatenation (conflicts with formatter)
    "TD002",   # Missing author in TODO
    "TD003",   # Missing issue link in TODO
    "FIX002",  # Line contains TODO
    "TC001",   # Move application import into type-checking block (can cause circular imports)
    "TC002",   # Move third-party import into type-checking block (over-optimization)
    "TC003",   # Move stdlib import into type-checking block (over-optimization)
    "PLC0415", # Import should be at top-level (intentional lazy imports)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",    # Allow assert in tests
    "ARG",     # Unused arguments in fixtures
    "FBT",     # Boolean trap in test parameters
    "PLR2004", # Magic values in tests
    "ANN",     # Type annotations optional in tests
    "SLF001",  # Private member access allowed in tests
    "S108",    # Temp file paths allowed in tests
    "DTZ",     # Datetime timezone not required in tests
    "RUF059",  # Unused unpacked variables allowed in tests
]
"src/para_files/classifiers/rules_engine.py" = [
    "C901",    # classify() intentionally handles multiple rule types
    "PLR0912", # _create_result() handles multiple placeholder types
]
"src/para_files/mover.py" = [
    "PLR0911", # move() has extra returns for critical safety checks
]
"src/para_files/utils/file_utils.py" = [
    "PLR0911", # read_content_preview() is a dispatch function with many early-return branches
]
"src/para_files/utils/ocr.py" = [
    "ANN401",  # PyObjC objects require Any type annotations
]
"src/para_files/main.py" = [
    "FBT002",   # Boolean default positional arguments are standard for Typer CLI
    "PLR0913",  # CLI commands naturally have many parameters
]
"src/para_files/cli/**/*.py" = [
    "FBT002",   # Boolean default positional arguments are standard for Typer CLI
    "PLR0913",  # CLI commands naturally have many parameters
]
"src/para_files/classifiers/mlx_llm_classifier.py" = [
    "PLR0913",  # LLMClassifier.__init__ has many config parameters
]

[tool.ruff.lint.isort]
known-first-party = ["para_files"]
force-single-line = false
lines-after-imports = 2

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pylint]
max-args = 6
max-branches = 12
max-returns = 6
max-statements = 50

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true

# ============================================================================
# Mypy - Type Checking
# ============================================================================
[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
show_error_codes = true
show_column_numbers = true
pretty = true

[[tool.mypy.overrides]]
module = ["pypdf", "pypdf.*", "semantic_router.*", "litellm.*", "transformers.*", "Vision", "Cocoa", "Quartz", "fitz", "odf.*", "xlrd.*", "openpyxl.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false
disallow_incomplete_defs = false

# ============================================================================
# Pytest - Testing
# ============================================================================
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = [
    "-ra",
    "-q",
    "--strict-markers",
    "--strict-config",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
]

# ============================================================================
# Coverage
# ============================================================================
[tool.coverage.run]
source = ["src/para_files"]
branch = true
parallel = true
omit = ["*/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
fail_under = 79
show_missing = true
